@@ -609,7 +609,9 @@ class Rule(RuleFactory):
         for key in set(values) - processed:
             query_vars[key] = unicode(values[key])
         if query_vars:
-            url += '?' + url_encode(query_vars, self.map.charset)
+            url += '?' + url_encode(query_vars, self.map.charset,
+                                    sort=self.map.sort_parameters,
+                                    key=self.map.sort_key)
 
         return subdomain, url
 
@@ -873,7 +875,7 @@ class Map(object):
 
     def __init__(self, rules=None, default_subdomain='', charset='utf-8',
                  strict_slashes=True, redirect_defaults=True,
-                 converters=None):
+                 converters=None, sort_parameters=False, sort_key=None):
         """Initializes the new URL map.
 
         :param rules: sequence of url rules for this map.
@@ -887,6 +889,11 @@ class Map(object):
         :param converters: A dict of converters that adds additional converters
                            to the list of converters. If you redefine one
                            converter this will override the original one.
+        :param sort_parameters: If set to `True` the url parameters are sorted.
+                                See `url_encode` for more details.
+        :param sort_key: The sort key function for `url_encode`.
+
+        *new in Werkzeug 0.5* `sort_parameters` and `sort_key` was added.
         """
         self._rules = []
         self._rules_by_endpoint = {}
@@ -900,6 +907,9 @@ class Map(object):
         self.converters = DEFAULT_CONVERTERS.copy()
         if converters:
             self.converters.update(converters)
+
+        self.sort_parameters = sort_parameters
+        self.sort_key = sort_key
 
         for rulefactory in rules or ():
             self.add(rulefactory)
